--- a/angular.json
+++ b/angular.json
@@ -3,5 +3,131 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
+    "govbr-ds-angular": {
+      "projectType": "library",
+      "root": "projects/govbr-ds-angular",
+      "sourceRoot": "projects/govbr-ds-angular/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/govbr-ds-angular/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/govbr-ds-angular/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/govbr-ds-angular/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-builders/jest:run",
+          "options": {
+            "configPath": "./jest.config.ts"
+          }
+        }
+      }
+    },
+    "govbr-ds-angular-example": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
+      "root": "projects/govbr-ds-angular-example",
+      "sourceRoot": "projects/govbr-ds-angular-example/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:application",
+          "options": {
+            "outputPath": "dist/govbr-ds-angular-example",
+            "index": "projects/govbr-ds-angular-example/src/index.html",
+            "browser": "projects/govbr-ds-angular-example/src/main.ts",
+            "polyfills": [
+              "zone.js"
+            ],
+            "tsConfig": "projects/govbr-ds-angular-example/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "projects/govbr-ds-angular-example/public"
+              }
+            ],
+            "styles": [
+              "projects/govbr-ds-angular-example/src/styles.scss",
+              "@govbr-ds/core/dist/core.min.css",
+              "@fortawesome/fontawesome-free/css/all.min.css"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kB",
+                  "maximumError": "1MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "4kB",
+                  "maximumError": "8kB"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "buildTarget": "govbr-ds-angular-example:build:production"
+            },
+            "development": {
+              "buildTarget": "govbr-ds-angular-example:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
+            "tsConfig": "projects/govbr-ds-angular-example/tsconfig.spec.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "projects/govbr-ds-angular-example/public"
+              }
+            ],
+            "styles": [
+              "projects/govbr-ds-angular-example/src/styles.scss"
+            ],
+            "scripts": []
+          }
+        }
+      }
+    }
   }
 }
