--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build govbr-ds-angular",
-    "build:page": "ng build govbr-ds-angular-example",
+    "build:page": "ng build govbr-ds-angular-example --base-href /govbr-ds-angular/",
     "watch": "ng build --watch --configuration development",
     "prepare": "husky || true",
     "p:check": "prettier --config ./.prettierrc --list-different \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss,.html}\"",
